--- a/ex5_report/README.tex
+++ b/ex5_report/README.tex
@@ -434,7 +434,7 @@ Figure \ref{fig:hd} shows the result images with different number of iteration o
 
 As the iteration goes on, mean square error(MSE) evolves as Figure \ref{hdmse}. For $\tau = 0.1$, the MSE is the smallest when the number of iteration is 11. (MSE $= 279.9$) \\ 
 
-Results with different value of $\tau$ are as Figure \ref{fig:hdtau}. MSE evolution is as \ref{fig:hdtaumse}. If $\tau$ is too small, it takes longer time to find a optimal solution. In contrast, if $\tau$ is too large, the MSE diverges as Figure \ref{fig:hdtauc} and \ref{fig:hdtaumseb}}. 
+Results with different value of $\tau$ are as Figure \ref{fig:hdtau}. MSE evolution is as \ref{fig:hdtaumse}. If $\tau$ is too small, it takes longer time to find a optimal solution. In contrast, if $\tau$ is too large, the MSE diverges as Figure \ref{fig:hdtauc} and \ref{fig:hdtaumseb}. 
 
 \begin{figure}[b]
 	\caption{Denoised image with different $\tau$ \label{fig:hdtau}}
